Added myself to people

--- a/people.html
+++ b/people.html
@@ -74,6 +74,12 @@
 <td><b>Dr. Colin Averill</b> - <a href="http://colinaverill.weebly.com/">web</a> <a href="documents/ColinAverillCV.071816.pdf">CV</a><br>Project: NOAA postdoc, <a href="index.html#nefi">NEFI</a></td>
 </tr>
 
+<tr>
+<td width=250 align ="right"> <img src="images/HD2019.JPG" width="250"></td>
+<td width=20></td>
+<td><b>Dr. Hamze Dokoohaki</b> <a href="https://www.researchgate.net/profile/Hamze_Dokoohaki">CV</a><br>Project: <a href="index.html#cms">NASA CMS</a></td>
+</tr>
+
 </table>
 
 <p></p>
